force-app/main/default/objects/hed__Academic_Certification__c/fields/hed__Field_Of_Study__c.field-meta.xml
<CustomField>
    <fullName>hed__Field_Of_Study__c</fullName>
    <description>The field of study of the Academic Certification.</description>
    <inlineHelpText>The field of study of the Academic Certification.</inlineHelpText>
    <label>Field of Study</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Business, Management, and Marketing</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Computer and Information Sciences</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>English Language, Literature, and Letters</fullName>
            </value>
            <value>
                <fullName>Family and Consumer Sciences</fullName>
            </value>
            <value>
                <fullName>Foreign Languages</fullName>
            </value>
            <value>
                <fullName>General Studies and Humanities</fullName>
            </value>
            <value>
                <fullName>Health Professions</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Legal Professions and Studies</fullName>
            </value>
            <value>
                <fullName>Mathematics and Statistics</fullName>
            </value>
            <value>
                <fullName>Natural Resources and Conservation</fullName>
            </value>
            <value>
                <fullName>Philosophy and Religious Studies</fullName>
            </value>
            <value>
                <fullName>Physical Sciences</fullName>
            </value>
            <value>
                <fullName>Psychology</fullName>
            </value>
            <value>
                <fullName>Social Sciences</fullName>
            </value>
            <value>
                <fullName>Visual and Performing Arts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>