force-app/main/default/objects/hed__Academic_Certification__c/fields/hed__Issuer__c.field-meta.xml
<CustomField>
    <fullName>hed__Issuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the issuing organization of the Academic Certification.</description>
    <inlineHelpText>The issuing organization of the Academic Certification.</inlineHelpText>
    <label>Issuer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Academic Certifications</relationshipLabel>
    <relationshipName>Academic_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>