force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Academic_Certification_Level__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_Certification_Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa Bac+4</fullName>
            </value>
            <value>
                <fullName>Grade de Licence</fullName>
            </value>
            <value>
                <fullName>RNCP Niveau 6</fullName>
            </value>
            <value>
                <fullName>Visa Bac +5</fullName>
            </value>
            <value>
                <fullName>Grade de Master</fullName>
            </value>
            <value>
                <fullName>RNCP Niveau 7</fullName>
            </value>
            <value>
                <fullName>Bac</fullName>
                <isActive>false</isActive>
                <label>Bac</label>
            </value>
            <value>
                <fullName>Bac+1</fullName>
                <isActive>false</isActive>
                <label>Bac+1</label>
            </value>
            <value>
                <fullName>Bac+2</fullName>
                <isActive>false</isActive>
                <label>Bac+2</label>
            </value>
            <value>
                <fullName>Bac+3</fullName>
                <isActive>false</isActive>
                <label>Bac+3</label>
            </value>
            <value>
                <fullName>Bac+4</fullName>
                <isActive>false</isActive>
                <label>Bac+4</label>
            </value>
            <value>
                <fullName>Bac+5</fullName>
                <isActive>false</isActive>
                <label>Bac+5</label>
            </value>
            <value>
                <fullName>Bac+6</fullName>
                <isActive>false</isActive>
                <label>Bac+6</label>
            </value>
            <value>
                <fullName>Bac+7</fullName>
                <isActive>false</isActive>
                <label>Bac+7</label>
            </value>
            <value>
                <fullName>Bac+8</fullName>
                <isActive>false</isActive>
                <label>Bac+8</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>