force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Academic_certification_organism__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_certification_organism__c</fullName>
    <label>Academic certification organism</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AACSB</fullName>
            </value>
            <value>
                <fullName>EQUIS</fullName>
            </value>
            <value>
                <fullName>QUALIOPI</fullName>
            </value>
            <value>
                <fullName>Hcéres</fullName>
            </value>
            <value>
                <fullName>BSIS</fullName>
            </value>
            <value>
                <fullName>DD&amp;RS</fullName>
            </value>
            <value>
                <fullName>Campus France &quot;Bienvenue en France&quot;</fullName>
            </value>
            <value>
                <fullName>CEFDG</fullName>
            </value>
            <value>
                <fullName>AMBA</fullName>
            </value>
            <value>
                <fullName>Conférence des Grandes Ecoles (CGE)</fullName>
            </value>
            <value>
                <fullName>France Compétences</fullName>
            </value>
            <value>
                <fullName>Emlyon business school</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>