force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Academic_Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_Certification_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>