force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Double__c.field-meta.xml
<CustomField>
    <fullName>SIS_Double__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double</label>
    <type>Checkbox</type>
</CustomField>