force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_European_level__c.field-meta.xml
<CustomField>
    <fullName>SIS_European_level__c</fullName>
    <label>European level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Niveau 6</fullName>
            </value>
            <value>
                <fullName>Niveau 7</fullName>
            </value>
            <value>
                <fullName>Niveau 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>