force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_External_ID_2__c.field-meta.xml
<CustomField>
    <fullName>SIS_External_ID_2__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External ID 2</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>