force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Internal_Academic_Certification__c.field-meta.xml
<CustomField>
    <fullName>SIS_Internal_Academic_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Academic Certification</label>
    <type>Checkbox</type>
</CustomField>