force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_NSF_Code__c.field-meta.xml
<CustomField>
    <fullName>SIS_NSF_Code__c</fullName>
    <label>NSF Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>100	Formations générales</fullName>
            </value>
            <value>
                <fullName>110	Spécialités pluriscientifiques</fullName>
            </value>
            <value>
                <fullName>111	Physique-chimie</fullName>
            </value>
            <value>
                <fullName>112	Chimie-biologie, biochimie</fullName>
            </value>
            <value>
                <fullName>113	Sciences naturelles (biologie-géologie)</fullName>
            </value>
            <value>
                <fullName>114	Mathématiques</fullName>
            </value>
            <value>
                <fullName>115	Physique</fullName>
            </value>
            <value>
                <fullName>116	Chimie</fullName>
            </value>
            <value>
                <fullName>117	Sciences de la terre</fullName>
            </value>
            <value>
                <fullName>118	Sciences de la vie</fullName>
            </value>
            <value>
                <fullName>120	Spécialités pluridisciplinaires, sciences humaines et droit</fullName>
            </value>
            <value>
                <fullName>121	Géographie</fullName>
            </value>
            <value>
                <fullName>122	Economie</fullName>
            </value>
            <value>
                <fullName>123	Sciences sociales (y compris démographie, anthropologie)</fullName>
            </value>
            <value>
                <fullName>124	Psychologie</fullName>
            </value>
            <value>
                <fullName>125	Linguistique</fullName>
            </value>
            <value>
                <fullName>126	Histoire</fullName>
            </value>
            <value>
                <fullName>127	Philosophie, éthique et théologie</fullName>
            </value>
            <value>
                <fullName>128	Droit, sciences politiques</fullName>
            </value>
            <value>
                <fullName>130	Spécialités littéraires et artistiques plurivalentes</fullName>
            </value>
            <value>
                <fullName>131	Français, littérature et civilisation française</fullName>
            </value>
            <value>
                <fullName>132	Arts plastiques</fullName>
            </value>
            <value>
                <fullName>133	Musique, arts du spectacle</fullName>
            </value>
            <value>
                <fullName>134	Autres disciplines artistiques et spécialités artistiques plurivalentes</fullName>
            </value>
            <value>
                <fullName>135	Langues et civilisations anciennes</fullName>
            </value>
            <value>
                <fullName>136	Langues vivantes, civilisations étrangères et régionales</fullName>
            </value>
            <value>
                <fullName>200	Technologies industrielles fondamentales (génie industriel, procédés de transformation, spécialités à dominante fonctionnelle)</fullName>
            </value>
            <value>
                <fullName>201	Technologies de commandes des transformations industriels (automatismes et robotique industriels, informatique industrielle)</fullName>
            </value>
            <value>
                <fullName>210	Spécialités plurivalentes de l&apos;agronomie et de l&apos;agriculture</fullName>
            </value>
            <value>
                <fullName>211	Productions végétales, cultures spécialisées (horticulture, viticulture, arboriculture fruitière...)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>