force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Number_of_RNCP_Attributes__c.field-meta.xml
<CustomField>
    <fullName>SIS_Number_of_RNCP_Attributes__c</fullName>
    <description>Automatically filled by a declarative roll up summary. Please do not edit manually.</description>
    <inlineHelpText>Automatically filled by a declarative roll up summary. Please do not edit manually.</inlineHelpText>
    <label>Number of RNCP Attributes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>