force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Program_category__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_category__c</fullName>
    <label>Program category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduating</fullName>
            </value>
            <value>
                <fullName>Certifying</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>