force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Program_name__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Academic Program</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Academic Certifications (Program)</relationshipLabel>
    <relationshipName>Academic_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>