force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Program_Official_Name__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_Official_Name__c</fullName>
    <formula>SIS_Program_name__r.SIS_Official_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Official Name</label>
    <type>Text</type>
</CustomField>