force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_RNCP__c.field-meta.xml
<CustomField>
    <fullName>SIS_RNCP__c</fullName>
    <formula>SIS_Number_of_RNCP_Attributes__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RNCP</label>
    <type>Checkbox</type>
</CustomField>