force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Simple__c.field-meta.xml
<CustomField>
    <fullName>SIS_Simple__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Simple</label>
    <type>Checkbox</type>
</CustomField>