force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Triple__c.field-meta.xml
<CustomField>
    <fullName>SIS_Triple__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triple</label>
    <type>Checkbox</type>
</CustomField>