force-app/main/default/objects/hed__Academic_Certification__c/fields/SIS_Type_of_diploma__c.field-meta.xml
<CustomField>
    <fullName>SIS_Type_of_diploma__c</fullName>
    <label>Type of diploma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>