force-app/main/default/objects/hed__Academic_Certification__c/fields/text_test__c.field-meta.xml
<CustomField>
    <fullName>text_test__c</fullName>
    <label>text test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>