force-app/main/default/objects/hed__Academic_Certification__c/recordTypes/hed__Certificate.recordType-meta.xml
<RecordType>
    <fullName>hed__Certificate</fullName>
    <active>true</active>
    <description>A certification related to the completion of specific courses.</description>
    <label>Certificate</label>
</RecordType>